--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,22 +1,36 @@
-{% extends "base.html" %} 
+{% extends "base.html" %}
 {% block content %}
-    <div class="container mt-4">
-        <h1>Вход</h1>
-        <form method="post" id="login-form">
-            {% csrf_token %} <!-- Включение CSRF токена -->
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" name="username" placeholder="Введите никнейм" required>
+<main class="container mt-5 pt-4">
+    <div class="main_content">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-lg-4">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h2 class="text-center mb-4"><i class="bi bi-box-arrow-in-right"></i> Вход</h2>
+                        <form method="post" id="login-form">
+                            {% csrf_token %} <!-- Включение CSRF токена -->
+                            <div class="mb-3">
+                                <label for="username">Username</label>
+                                <input type="text" class="form-control" id="username" name="username"
+                                    placeholder="Введите никнейм" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" name="password"
+                                    placeholder="Введите пароль" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100 mb-3">Войти</button>
+                        </form>
+                        <div class="text-center">
+                                <a href="{% url 'signup' %}" class="text-decoration-none">Нет аккаунта? Зарегистрируйтесь</a>
+                            </div>
+                        <div id="login-feedback" class="mt-4"></div>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Введите пароль" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Войти</button>
-        </form>
-    
-        <div id="login-feedback" class="mt-4"></div>
+        </div>
     </div>
+</main>
 {% endblock %}
 
 <!---   <script>
